# gi005

./: .gitignore  CLAUDE.md  README.md  VERIFICATION_REPORT.md  pytest.ini
.claude/: settings.json  settings.local.json
dependencies/: README.md
docs/: 00-索引.md  01-快速开始.md  02-安装部署.md  03-使用指南.md  04-架构设计.md  05-API参考.md  06-常见问题.md  07-更新日志.md  08-Windows启动指南.md  ARCHITECTURE.md  INSTALL.md  INTEGRATION.md  NEMO-MSDD-SETUP.md  SPEAKER-AI-TECH-SELECTION.md  SPEAKER-DIARIZATION-V2-SOLUTION.md  SPEAKER-DIARIZATION-V3-SOLUTION.md  USAGE.md  WSL2-DEPLOYMENT-GUIDE.md  WSL2-D盘安装详细指南.md  WSL2部署指南.md  spec-kit使用指南.md
offline_package/: README.md
voice-clone-tts/: .dockerignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.cpu  EXTERNAL_REPOS_SETUP.md  OFFLINE_QUICKSTART.md  PROJECT_SUMMARY.md  README.md  README_NEMO_MSDD.md  V3_ARCHITECTURE_PLAN.md  VERIFICATION_REPORT.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-freeze.txt  requirements-nemo-msdd.txt  requirements.txt  test_nemo_msdd_basic.py
voice-clone-tts/examples/: README_NEMO_MSDD.md  demo_nemo_msdd_api.py  example_chattts.py  example_combined_pipeline.py  example_coqui_xtts.py  example_openvoice.py  example_speechbrain.py  test_nemo_msdd.py  verify_nemo_msdd_code.py
voice-clone-tts/production/: README.md  client.py  environment.yml  main.py  requirements.txt  server.py
voice-clone-tts/production/common/: __init__.py  audio_processor.py  base.py  logger.py  utils.py
voice-clone-tts/production/test_voices/test_voice/: voice.json
voice-clone-tts/production/xtts/: __init__.py  cloner.py  requirements.txt
voice-clone-tts/scripts/: install.bat  install.sh  install_nemo_msdd.bat  install_nemo_msdd.sh
voice-clone-tts/solutions/01-openvoice/: README.md  requirements.txt  test_clone.py  voice_cloner.py
voice-clone-tts/solutions/02-coqui-xtts/: README.md  requirements.txt  test_clone.py  voice_cloner.py
voice-clone-tts/solutions/03-gpt-sovits/: README.md  requirements.txt  test_clone.py  voice_cloner.py
voice-clone-tts/solutions/04-cosyvoice/: README.md  requirements.txt  test_clone.py  voice_cloner.py
voice-clone-tts/solutions/05-fish-speech/: README.md  requirements.txt  test_clone.py  voice_cloner.py
voice-clone-tts/src/: README.md  __init__.py  main.py
voice-clone-tts/src/common/: __init__.py  exceptions.py  models.py  paths.py
voice-clone-tts/src/diarization/: __init__.py  nemo_msdd_diarizer.py
voice-clone-tts/src/gateway/: __init__.py  app.py  limiter.py  registry.py  websocket.py
voice-clone-tts/src/workers/: base_worker.py  gpt_sovits_worker.py  openvoice_worker.py  xtts_worker.py
voice-clone-tts/tests/: __init__.py  test_api.py  test_nemo_msdd_structure.py  test_utils.py
voice-clone-tts/v3/: README.md  TEST_REPORT.md  __init__.py  main.py
voice-clone-tts/v3/common/: exceptions.py  logging.py  models.py
voice-clone-tts/v3/gateway/: app.py  limiter.py  websocket.py
voice-clone-tts/v3/workers/: __init__.py  base_worker.py  openvoice_worker.py  xtts_worker.py
(+37 files in other folders)
