[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-clone-tts"
version = "3.2.1"
description = "企业级语音克隆微服务系统，支持 XTTS-v2、OpenVoice、GPT-SoVITS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Voice Clone Team"}
]
keywords = ["tts", "voice-cloning", "speech-synthesis", "xtts", "openvoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web 框架
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",

    # 音频处理
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",

    # 科学计算
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # 配置和日志
    "pyyaml>=6.0",
    "coloredlogs>=15.0",

    # 网络
    "requests>=2.28.0",
    "aiohttp>=3.8.0",

    # 工具
    "tqdm>=4.65.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# XTTS-v2 引擎
xtts = [
    "TTS>=0.22.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0,<4.50.0",
]

# OpenVoice 引擎
openvoice = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",
]

# GPT-SoVITS 引擎 (通过 API 调用，依赖较少)
gpt-sovits = [
    "requests>=2.28.0",
]

# 完整安装 (所有引擎)
full = [
    "voice-clone-tts[xtts,openvoice]",
]

# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
voice-clone = "src.main:main"

[project.urls]
Homepage = "https://github.com/githubstudycloud/gi005"
Documentation = "https://github.com/githubstudycloud/gi005/blob/main/voice-clone-tts/README.md"
Repository = "https://github.com/githubstudycloud/gi005"
Issues = "https://github.com/githubstudycloud/gi005/issues"

[tool.setuptools]
packages = ["src", "src.common", "src.gateway", "src.workers"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
